tests/miniJava/neg/005234_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] if java ( ) { return 0 ; } }
